--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ install:
 - sudo apt-get install python3-dev
 - sudo apt-get install swig
 - swig -python translate.i
-- gcc -fPIC -c translate_wrap.c -I/usr/local/include/python3.6
+- gcc -fPIC -c translate_wrap.c
 - gcc -shared translate_wrap.o -o _trans.so
 - ls
 - pip install .
