--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
 - sudo apt-get install python3-dev
 - sudo apt-get install swig
 - swig -python translate.i
+- locate Python.h
 - gcc -fPIC -c translate_wrap.c
 - gcc -shared translate_wrap.o -o _trans.so
 - ls
