--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 install:
 - sudo apt-get install python3-dev
+- python-config --cflags
+
 - sudo apt-get install swig
 - swig -python translate.i
 - gcc -fPIC -c translate_wrap.c
