--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: python
 install:
 - sudo apt-get install python3-dev
 - python-config --cflags
-
 - sudo apt-get install swig
 - swig -python translate.i
-- gcc -fPIC -c translate_wrap.c
+- gcc -fPIC -c translate_wrap.c -I/home/travis/virtualenv/python3.6.7/include/python3.6m
 - gcc -shared translate_wrap.o -o _trans.so
 - ls
 - pip install .
